# banking-support-chatbot

./: .env.example  .gitignore  Makefile  PRD.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.langgraph  alembic.ini  langgraph.json  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: c48e7c309cd8_initial_schema.py  f5b5cf38a6d2_make_support_tickets_customer_id_.py
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __init__.py  _shared.py  account.py  action_executor.py  authentication.py  card.py  compliance.py  customer_consent.py  escalation.py  faq.py  human_approval.py  response.py  supervisor.py  transaction.py
backend/src/api/: routes.py
backend/src/database/: __init__.py  run_seed.py
backend/src/graphs/: __init__.py  main_graph.py
backend/src/models/: __init__.py  account.py  approval_request.py  audit_event.py  customer.py  knowledge_document.py  support_ticket.py  transaction.py
backend/src/schemas/: __init__.py  actions.py  approval.py  intent.py  responses.py  risk.py  routing.py
backend/src/services/: __init__.py  account_service.py  approval_service.py  audit_service.py  customer_service.py  knowledge_service.py  masking.py  ticket_service.py  transaction_service.py
backend/src/tools/: __init__.py  account_tools.py  card_tools.py  customer_tools.py  knowledge_tools.py  support_tools.py  transaction_tools.py
backend/tests/: test_hitl.py  test_routing.py  test_security.py
database/seed/: seed_accounts.py  seed_customers.py  (+2 more)
docs/: index.html
(+15 files in other folders)
