[project]
name = "banking-support-chatbot"
version = "0.1.0"
description = "Multi-agent banking support chatbot using LangGraph"
requires-python = ">=3.12"
dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langsmith>=0.3",
    "langgraph-checkpoint-postgres>=2.0",

    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",

    # Utilities
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
